# oauthive

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
oauthive/: capabilities.py  cleanup.py  cli.py  client.py  config.py  context.py  discovery.py  fixture.py  legal.py  runner.py  session.py
oauthive/browser/: __init__.py  base.py  manual.py  playwright_driver.py  refresh.py
oauthive/checks/: base.py  dpop.py  id_token.py  logout.py  mix_up.py  nonce.py  pkce.py  redirect_uri.py  refresh_token.py  response_type.py  saml_assertion.py  saml_comment.py  saml_encryption.py  saml_idp_initiated.py  saml_metadata.py  saml_relaystate.py  saml_signature.py  saml_slo.py  saml_xsw.py  saml_xxe.py  scope.py  state.py
oauthive/fixtures/: README.md  docker-compose.yml
oauthive/fixtures/keycloak/: realm-export.json
oauthive/fixtures/vuln-sp/: Dockerfile  app.py  requirements.txt
oauthive/jose/: __init__.py  dpop.py  forge.py  verify.py
oauthive/malicious_rp/: __init__.py  certs.py  saml_keys.py  server.py
oauthive/report/: html.py  markdown.py  redact.py  schema.py  text.py
oauthive/saml/: __init__.py  bindings.py  forge.py  metadata.py  sp.py  verify.py
tests/unit/: test_browser.py  test_capabilities.py  test_checks_m4.py  test_checks_m6.py  test_cleanup.py  test_client.py  test_config.py  test_discovery.py  test_end_to_end.py  test_end_to_end_m4.py  test_fixture.py  test_id_token_check.py  test_jose_forge.py  test_jose_verify.py  test_legal.py  test_m15.py  test_malicious_rp.py  test_mix_up_check.py  test_redirect_uri.py  test_report.py  test_runner.py  test_runner_session_factory.py  test_saml_forge.py  test_saml_keys_and_malicious_sp.py  test_saml_m13.py  test_saml_metadata.py  test_saml_sp.py  test_saml_verify_and_checks.py  test_saml_xsw_family.py  test_session.py  test_session_mode.py  test_token_flows.py
