[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "oauthive"
version = "0.1.0"
description = "OAuth 2.0 / OIDC / SAML 2.0 misconfiguration tester."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "oauthive contributors" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "typer>=0.12",
    "structlog>=24.1",
    "pyjwt[crypto]>=2.8",
    "cryptography>=42",
    "jinja2>=3.1",
    "lxml>=5.1",
    "defusedxml>=0.7",
    "signxml>=3.2",
    "starlette>=0.37",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
browser = ["playwright>=1.42", "pyotp>=2.9"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "ruff>=0.3",
]

[project.scripts]
oauthive = "oauthive.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["oauthive"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
